2019-1/221/users/4117/executions/1579_2896.log
== SUBMITION (2019-03-12 19:32:06) 
-- CODE:
print(python)
var = input("python")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.130904
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1579/2896/main.py", line 1, in <module>
    print(python)
NameError: name 'python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:01:20) 
-- CODE:
print(python)
var = input("jade")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.144654
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1579/2896/main.py", line 1, in <module>
    print(python)
NameError: name 'python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:12:53) 
-- CODE:
#Use esse codigo como ponto de partida

var = input("jade")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.194056
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
